--- a/main.html
+++ b/main.html
@@ -11,14 +11,18 @@
     <script type="text/javascript" src="./script.js">
 </script>
       <nav>
-          <a href="https://en.wikipedia.org/wiki/Kerala">Home</a><br>
-		  <a href="https://en.wikipedia.org/wiki/Up">About us</a><br>
-		  <a href="https://en.wikipedia.org/wiki/Delhi">Contact us</a><br>
+         <ul>
+			 <li><a href="https://en.wikipedia.org/wiki/Kerala">Home</a></li>
+			 <li><a href="https://en.wikipedia.org/wiki/Up">About us</a></li>
+			 <li><a href="https://en.wikipedia.org/wiki/Delhi">Contact us</a></li>
+		 </ul>
 	  </nav>
 	<h3>3 random audios</h3>
-	<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"></audio>
-	<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
-	<audio controls><source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
+	<ul>
+		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"></audio></li>
+		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+		<li><audio controls><source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio></li>
+	</ul>
 </body>
 
 </html>
