--- a/main.html
+++ b/main.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<title>Semantic Navbar with Audio</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-   
-      <nav>
-         <ul>
-			 <li><a href="https://en.wikipedia.org/wiki/Kerala">Home</a></li>
-			 <li><a href="https://en.wikipedia.org/wiki/Up">About us</a></li>
-			 <li><a href="https://en.wikipedia.org/wiki/Delhi">Contact us</a></li>
-		 </ul>
-	  
-	<h1>3 random audios</h1>
-	<ol>
-		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"></audio></li>
-		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio></li>
-		<li><audio controls><source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3"></audio></li>
-	</ol>
-  </nav>
-	 <script type="text/javascript" src="./script.js">
-</script>
-</body>
 
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About Us</a></li>
+			<li><a href="#">Contact Us</a></li>
+		</ul>
+	</nav>
+
+	<h3>Random Audios:</h3>
+
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+	</audio>
+
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+	</audio>
+
+	<audio controls>
+		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+	</audio>
+
+</body>
 </html>
