--- a/main.html
+++ b/main.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-	<title>Semantic Navbar with Audio</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+		
+</script>
 	<nav>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Contact Us</a></li>
-		</ul>
-	</nav>
-
-	<h3>Random Audios:</h3>
-
-	<audio controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-	</audio>
-
-	<audio controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-	</audio>
-
-	<audio controls>
-		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-	</audio>
+        <ul>
+            <li>
+                <a href="www.google.com">Home</a>
+            </li>
+            <li>
+                <a href="www.google.com">About us</a>
+            </li>
+            <li>
+                <a href="www.google.com">Contact us</a>
+            </li>
+        </ul>
+    </nav>
+    <h1>3 random audios</h1>
+    <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+    <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+</body>
 
 </body>
+
 </html>
